Fixes column header icon position on Firefox

--- a/styles/column.less
+++ b/styles/column.less
@@ -30,6 +30,7 @@
     margin: 0;
     max-width: 100%;
     overflow: hidden;
+    position: relative;
     text-overflow: ellipsis;
     vertical-align: bottom;
     white-space: nowrap;
@@ -44,9 +45,10 @@
 .column-header-title .octicon-x {
     color: #999;
     cursor: pointer;
-    float: right;
     font-size: 18px;
     margin: 2px 0 0;
+    position: absolute;
+    right: 0;
     transition: color 0.3s ease-in-out;
 }
 
